# Cpp-Yellow-Belt

./: .gitignore
1/: CMakeLists.txt  blocks_weight.cpp  class_matrix.cpp  element_reference.cpp  find_max_repetition_count.cpp  sqrt_all.cpp  team_tasks.cpp  temperature_2.cpp
2/: phone_number.cpp  starter.cpp  test_get_distinct_real_root_count.cpp  test_is_polindrom.cpp  test_person.cpp  test_rational.cpp  unit_test_framework.cpp
3/: class_rectangle.cpp  class_rectangle.h  phone_number.cpp  sum_reverse_sort.h  sum_reverse_sum.cpp
3/Decomposition/: bus_manager.h  query.cpp  query.h  responses.h
4/: build_expression.cpp  build_expression_without_redundant_brackets.cpp  find_greater_elements.cpp  find_nearest_element.cpp  find_starts_with_char.cpp  find_starts_with_string.cpp  merge_sort_div2.cpp  merge_sort_div3.cpp  names_&_last_names.cpp  print_permutations.cpp  print_stats.cpp  print_vector_part.cpp  remove_duplicates.cpp  split_into_words.cpp
5/: figures.cpp  inheritance.cpp  notifiers.cpp  refactoring_the_code.cpp
6/Database/: condition_parser.cpp  condition_parser.h  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h  token.cpp
6/Дополнительный файлы/: test_db.h  test_runner.h
