cmake_minimum_required(VERSION 3.16)
project(1)

set(CMAKE_CXX_STANDARD 17)

add_executable(1
#        cmake-build-debug/1.cbp
#        cmake-build-debug/cmake_install.cmake
#        cmake-build-debug/CMakeCache.txt
#        cmake-build-debug/Makefile
#        blocks_weight.cpp
#        class_matrix.cpp
#        CMakeLists.txt
#        element_reference.cpp
#        find_max_repetition_count.cpp
#        sqrt_all.cpp
#        team_tasks.cpp
#        temperature_2.cpp
#        ../2/test_rational.cpp ../2/test_is_polindrom.cpp ../2/sum_reverse_sort.h ../2/sum_reverse_sum.cpp ../2/phone_number.h ../2/phone_number.cpp
        ../4/find_greater_elements.cpp ../4/split_into_words.cpp ../4/remove_duplicates.cpp ../4/print_permutations.cpp ../4/print_stats.cpp ../4/merge_sort_div2.cpp ../4/merge_sort_div3.cpp ../4/find_nearest_element.cpp ../4/names_&_last_names.cpp ../4/find_starts_with_char.cpp ../4/find_starts_with_string.cpp ../4/build_expression.cpp ../4/build_expression_without_redundant_brackets.cpp ../5/inheritance.cpp)
